--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
     display: flex;
     flex-direction:column;
     align-items: center;
-    background-image: url('images/background2.svg');
+    background-image: url('background2.svg');
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
